# program_commit

./: CMakeLists.txt  Get_info.cpp  Get_info.h  main.cpp  readme  run_for_clang  run_for_g++
